# booklogger

./: .dockerignore  .eslintrc.yml  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  Dockerfile  Justfile  Makefile  Pipfile  Procfile  README.md  docker-compose.yml  fly.toml  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rome.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: main.yml
booklogger/: asgi.py  jinja2.py  settings.py  urls.py  wsgi.py
docker-entrypoint-initdb.d/: create-db-user.sh
scripts/: check-coverage.py  pre-commit.sh
