[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "booklogger.settings"
addopts = "--nomigrations --cov=booklogger --cov=library --cov-report term-missing:skip-covered --cov-fail-under=60"
norecursedirs = "library/jinja2/library"

[tool.coverage.report]
omit = [
        "*/settings.py",
        "*/urls.py",
        "booklogger/?sgi.py",
        "library/migrations/*",
    ]

[tool.mypy]
files = ["booklogger", "library"]
exclude = "/(migrations|tests|jinja2)/$"
pretty = true
show_error_codes = true

check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

plugins = ["mypy_django_plugin.main"]

# disabled at least until typeddjango/django-stubs#700 is fixed
cache_dir = "/dev/null"
no_incremental = true

[tool.django-stubs]
django_settings_module = "booklogger.settings"

[tool.flake8]
exclude = ["migrations"]
select = ["C","DJ","E","F","W","N","B","B9","SIM"]
extend-ignore = [
        # incompatible with black
        "E203",
        # superseded by flake8-bugbear B950
        "E501",
        # incompatible with black
        "W503",
]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.poetry]
name = "booklogger"
version = "0.1.0"
description = ""
authors = ["Benjamin Eskola <ben@eskola.uk>"]
license = "CC-BY-NC"

[tool.poetry.dependencies]
python = "^3.9"
bpython = "*"
bs4 = "*"
commonmark = "*"
dj-database-url = "*"
Django = "*"
django-crispy-forms = "*"
django-extensions = "*"
django-heroku = "*"
gunicorn = "*"
Jinja2 = "*"
psycopg2 = "*"
PyYAML = "*"
requests = "*"
stripunicode = {git = "https://github.com/benjamineskola/stripunicode", branch = "main"}
xmltodict = "*"
django-stubs-ext = "^0.3.1"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.3"}
curlylint = "*"
django-stubs = "^1.9"
flake518 = "^1.2.0"
flake8-bugbear = "*"
flake8-comprehensions = "^3.8.0"
flake8-django = "^1.1.2"
flake8-docstrings = "*"
flake8-simplify = "^0.18.1"
lxml = "*"
mypy = "*"
mypy-extensions = "*"
pep8-naming = "*"
pylint = "^2.13.2"
pytest-cov = "*"
pytest-django = "*"
pytest-factoryboy = "*"
requests-mock = "^1.9.3"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
